[Insert] 객체지향 생활체조 제2법칙 스터디

--- a/bin/test/calculator/회고.md
+++ b/bin/test/calculator/회고.md
@@ -1,4 +1,4 @@
 1. 이 로직도 메서드로 분리해야할까? 라는 의구심이 든다면 로직을 기능으로 분리해보자. 분리된다면 분리하자. 
-2. 원시타입을 포장하는 방식을 왜 사용하는지 이해가 되지 않아 찾아보았다. 
-	- 단순 값이 아닌 '정보'의 개념으로 사용되는 값은 포장하는 것이 좋다.
-	- 좋은 글이 있어 참고했다. https://limdingdong.tistory.com/9
+2. 원시타입을 포장하는 방식을 왜 사용하는지 이해가 되지 않아 찾아보았다. (출처 : https://limdingdong.tistory.com/9)
+	- 단순 값이 아닌 '정보'의 개념으로 사용되는 값은 여러 비지니스 로직에서 재사용 가능성이 있다.
+	- 
