--- a/bin/test/oop9/role3/회고.md
+++ b/bin/test/oop9/role3/회고.md
@@ -10,6 +10,7 @@
 4. ### 사용자가 1(홀) 또는 2(짝)을 입력하지 않을 때까지 게임은 계속된다.
 5. ### 객체지향 생활체조 9법칙의 1법칙 '<U>한 메서드에 오직 한 단계의 들여쓰기만 한다</U>'을 무조건 준수한다.
 6. ### 객체지향 생활체조 9법칙의 2법칙 '<U>Else_Switch_키워드를_사용하지_않는다</U>'을 무조건 준수한다.
+7. ### 객체지향 생활체조 9법칙의 3법칙 '<U>모든 원시값과 문자열을 포장(wrap)한다.</U>'을 무조건 준수한다.
 
 <br>
 
@@ -88,141 +89,121 @@
 
 # 4. 리팩토링 코드
 ```java
-   public void holjjak() {
-		
-		System.out.println("안신나는 홀짝 게임!");
-		System.out.println("1 : 홀, 2 : 짝, 그외 : 종료");
-		
-		Scanner in = new Scanner(System.in);
-		int input = 0;
+    class Holjjak{
+        
+        public void holjjak() {
+            
+            System.out.println("안신나는 홀짝 게임!");
+            System.out.println("1 : 홀, 2 : 짝, 그외 : 종료");
+            Scanner in = new Scanner(System.in);
+            
+            InputValue inputValue = null;
+            
+            while((inputValue = new InputValue(in.nextInt())).inputCheck()) {
+                RandomNumber randomNumber = new RandomNumber();
+                check(inputValue, randomNumber);
+            }
+            
+            in.close();
+        }
+        
+        /**
+        * @title 홀짝 체크
+        * @desc 난수에 대한 홀짝을 추출하고, 입력값과 비교하여 최종 홀짝 여부를 판단한다 
+        */
+        public void check(InputValue inputValue, RandomNumber randomNumber) {
 
-		while(inputCheck(input = in.nextInt())) {
-			int randomNumber = makeRandomNumber();
-			check(input, randomNumber);
-		}
-		
-		in.close();
-	}
-	
-	/**
-	 * @title 입력값 체크
-	 * @param input
-	 * @desc 사용자가 입력한 값을 체크한다. 
-	 * 1,2 일 경우 홀짝 게임을 계속 진행하고, 그 외일 경우 종료한다.
-	 */
-	public boolean inputCheck(int input) {
-		
-		if(input == 1 || input == 2) {
-			return true;
-		}
-		
-		System.out.println("종료되었습니다.");
-		return false;
-	}
-	
-	/**
-	 * @title 난수 생성
-	 * @param 
-	 * @dsec 1에서 10까지의 난수를 생성한다.
-	 */
-	public int makeRandomNumber() {
-			
-		Random random = new Random();
-		return random.nextInt(9)+1;
-	}
-	
-	/**
-	 * @title 홀짝 체크
-	 * @param input, randomNumber
-	 * @desc 난수에 대한 홀짝을 추출하고, 입력값과 비교하여 최종 홀짝 여부를 판단한다 
-	 */
-	public void check(int input, int randomNumber) {
+            if((!randomNumber.isHol() && !inputValue.isHol()) || (randomNumber.isHol() && inputValue.isHol())) {
+                System.out.println("개수는 "+ randomNumber.getRandomNumber() +"! 맞췄습니다.");
+                return;
+            }
+            
+            System.out.println("개수는 "+ randomNumber.getRandomNumber() +"! 틀렸습니다.");
+        }
+    }
 
-		int result = randomNumber%2;
-			
-		if(result == 0 && input == 2) {
-			System.out.println("개수는 "+ randomNumber +"! 맞췄습니다.");
-			return;
-		}
-		if(result == 1 && input == 1) {
-			System.out.println("개수는 "+ randomNumber +"! 맞췄습니다.");
-			return;
-		}
-		
-		System.out.println("개수는 "+ randomNumber +"! 틀렸습니다.");
-	}
+    /**
+    * @title 사용자 입력 값 클래스
+    * @desc 사용자가 입력한 값을 관리하는 Wrapper 클래스
+    */
+    class InputValue{
+        
+        int inputValue;
+        
+        // 생성자
+        InputValue(int inputValue){
+            this.inputValue = inputValue;
+        }
+        
+        // 입력값 체크
+        public boolean inputCheck() {
 
+            if(this.inputValue == 1 || this.inputValue == 2) {
+                return true;
+            }
+            System.out.println("종료되었습니다.");
+            return false;
+        }
+        
+        // 홀 여부 체크
+        public boolean isHol() {
+            if(inputValue == 1) {
+                return true; 
+            }
+            return false;
+        }
+    }
+
+    /**
+    * @title 랜덤 값 클래스
+    * @desc 랜덤 값을 관리하는 Wrapper 클래스
+    */
+    class RandomNumber{
+        
+        int randomNumber;
+        
+        // 난수 생성 생성자
+        RandomNumber(){
+            
+            Random random = new Random();
+            this.randomNumber = random.nextInt(9)+1;
+        }
+        
+        // 랜덤 값 조회
+        public int getRandomNumber() {
+            
+            return this.randomNumber;
+        }
+        
+        // 홀 여부 체크
+        public boolean isHol() {
+            
+            if(this.randomNumber % 2 == 1) {
+                return true;
+            }
+            return false;
+        }
+    }ㅒ
 ```
 <br>
 
-1. ### inputCheck 메서드의 else를 제거하였다. 제거하고 보니 애초에 else는 불필요했다.
+### 1. 사용자의 입력 값을 관리하는 InputValue 클래스를 생성하였다. 입력 값에 대한 체크, 홀수 여부를 체크하는 메서드 또한 위 클래스로 이관하여 입력 값에 대한 모든 책임을 지도록 하였다.
 
-- ### before
-``` java
-    public boolean inputCheck(int input) {
-		
-		if(input == 1 || input == 2) {
-			return true;
-		}else {
-			System.out.println("종료되었습니다.");
-			return false;
-		}
-	}
-```
+### 2. 랜덤 값을 관리하는 RandomNumber 클래스를 생성하였다. 랜덤 값에 생성, 조회, 홀수 여부를 체크하는 메서드또한 위 클래스로 이관하여 랜덤 값에 대한 모든 책임을 지도록 하였다.
 
-- ### after
-```java
-    public boolean inputCheck(int input) {
-		
-		if(input == 1 || input == 2) {
-			return true;
-		}
-		
-		System.out.println("종료되었습니다.");
-		return false;
-	}
-```
+### 3. check 메서드의 홀 짝 체크 대한 if문 2개가 조건만 다르고 내용은 동일하여 하나의 조건절로 병합하였다. 조건절 또한 isHol 메서드를 사용하여 가독성을 높였다.
+
 <br>
 
-1. ### check 메서드의 else if, else를 제거하고 return하는 형식으로 수정했다. 마찬가지로 return이 있으니 else가 필요없었다. 
-2. ### else if 대신 if-return 구문을 사용하니 코드가 분리되는 느낌(?)을 받았다. 말로 설명하긴 힘든데 else if는 상위 if문과 엮여있는 느낌이랄까... 그리고 else if문은 else{ if(조건){ 로직 }} 형식의 메커니즘이었다. 내부적으로 불필요한 else문을 실행하고, 객체지향 생활체조 1법칙을 위반하는 것이기도 했기에 고민없이 if문으로 대체하였다. 가독성면에서도 훨씬 좋아보인다. 
-
-- ### before 
-``` java
-    public void check(int input, int randomNumber) {
-
-		int result = randomNumber%2;
-			
-		if(result == 0 && input == 2) {
-			System.out.println("개수는 "+ randomNumber +"! 맞췄습니다.");
-		}else if(result == 1 && input == 1) {
-			System.out.println("개수는 "+ randomNumber +"! 맞췄습니다.");
-		}else {
-			System.out.println("개수는 "+ randomNumber +"! 틀렸습니다.");
-		}
-
-	}
-```
-<br>
-
-- ### after
-``` java
-    public void check(int input, int randomNumber) {
-
-		int result = randomNumber%2;
-			
-		if(result == 0 && input == 2) {
-			System.out.println("개수는 "+ randomNumber +"! 맞췄습니다.");
-			return;
-		}
-		if(result == 1 && input == 1) {
-			System.out.println("개수는 "+ randomNumber +"! 맞췄습니다.");
-			return;
-		}
-		
-		System.out.println("개수는 "+ randomNumber +"! 틀렸습니다.");
-	}
-```
 
 # 5. 회고
-### 역시 제2 법칙도 적용할게 있었다. else 문과 else if문보다 if문으로 처리하는 것이 가독성과 코드 품질면에서 득이 있었다. 또한, 조건절이 들어가는 모든 코드에 별 생각없이 else if, else를 사용했던 이유를 생각해봤는데, 이유를 생각해보지 않았던게 이유였다. 이제 문법을 사용할 때 사용하는 이유를 먼저 생각해보는 습관을 가져야겠다.
+### 제 3법칙 적용 전 이 법칙을 왜 써야하는지 이해가 잘 되지 않아 관련 내용을 머릿속에 정리한 후 작업하였다.
+    1. 상태나 정보를 갖는 변수값은 비지니스적으로 의미있는 값이다. 이를 단순 변수로 처리하는것 보다 책임을 위임할 수 있는 클래스 형태로 관리하는 것이 좋다. 
+    2. 원시타입을 포장함으로써 메서드의 시그니처가 명확해진다. 클래스로 포장한 타입의 메서드를 파라미터로 사용하게 되면 메소드를 설명하기 더욱 쉬워진다. 아래 두 메서드를 비교해보면 아래의 메서드 시그니처가 더욱 명확함을 알 수 있다. 출처 : https://limdingdong.tistory.com/9
+
+``` java
+public void evaluateCustomerCreditRate(int score)
+public void evaluateCustomerCreditRate(CreditScore creditScore)
+```
+### 1번은 확실히 이해가 가지만 2번의 경우 확실히 이해가 가지 않는다. Wrapper 클래스로 관리하는게 시그니처를 명확하게한다? 그로인한 장점도 크게 와닿지 않는다. 이 내용은 계속 리팩토링을 해 나가며 이해하도록 노력해야겠다. 
+    
