객체지향 생활법칙 7,8법칙 적용

--- a/bin/test/oop9/role8/회고.md
+++ b/bin/test/oop9/role8/회고.md
@@ -12,18 +12,13 @@
 6. ### 객체지향 생활체조 9법칙의 2법칙 '<U>Else_Switch_키워드를_사용하지_않는다</U>'을 무조건 준수한다.
 7. ### 객체지향 생활체조 9법칙의 3법칙 '<U>모든 원시값과 문자열을 포장(wrap)한다.</U>'을 무조건 준수한다.
 8. ### 객체지향 생활체조 9법칙의 4법칙 '<U>한 줄에 점을 하나만 찍는다.</U>'을 무조건 준수한다.
-9. ### 객체지향 생활체조 9법칙의 5법칙 '<U>줄여쓰지 않는다.</U>'을 무조건 준수한다.
+9. ### 객체지향 생활체조 9법칙의 5법칙 '<U>줄여쓰지 않는다.</U>을 무조건 준수한다.
 10. ### 객체지향 생활체조 9법칙의 6법칙 '<U>모든 엔티티를 작게 유지한다.</U>'을 무조건 준수한다.
-
+11. ### 객체지향 생활체조 9법칙의 7법칙 '<U>두개 이상의 인스턴스 변수를 가진 클래스를 쓰지 않는다.</U>'을 무조건 준수한다.
+11. ### 객체지향 생활체조 9법칙의 8법칙 '<U>일급 컬렉션을 사용한다.</U>'을 무조건 준수한다.
 <br>
 
 # 3. 회고
-### 이 법칙의 '작게' 라는 기준이 모호하여 찾아본 결과, 책에서 보다 정확하게 설명하고 있으며 내용은 다음과 같다.
-<br>
-
-> ### 50줄 이상 되는 클래스와 10개 파일 이상 되는 패키지는 없어야한다. 
-
-<br>
-
-### 이 의미는 긴 파일을 읽고, 이해하고, 재사용하기 어렵다는 의미하다. 짝은 너무 단순한 프로그램이라 그런지 최초 작성한 코드 또한 50줄이 채 되지 않았으며, 현재 3개의 클래스. 각 20줄 정도로 유지하고 있어 딱히 리팩토링하지 않았다.
-### 이 6 법칙은 객체지향 생활체조 원칙을  잘 지켜라는 의미 또한 내포하고 있지 않나 싶다. 
+### 일급 컬렉션이란 컬렉션 외에 다른 멤버변수를 포함하지 않는 클래스이다. 여기서 컬렉션은 Collection, Map 인터페이스를 상속받는 클래스를 의미하며
+### 대표적으로 List, HashMap, HashSet 등이 있다.
+### 3 원칙을 적용했을 때 자연스럽게 7 법칙도 적용이 되어 리팩토링을 하지 않았다. 복잡한 프로그램을 구현할 때 이 원칙을 지키는 것은 정말 어려울 것 같다.
