--- a/src/test/oop9/role6/회고.md
+++ b/src/test/oop9/role6/회고.md
@@ -25,5 +25,5 @@
 
 <br>
 
-### 이 의미는 결합도를 낮추고 응집도를 높히라는 의미. 즉 지금까지 적용한 1 ~ 5번째 법칙을 잘 지키라는 의미로 느껴진다. 홀짝은 너무 단순한 프로그램이라 그런지 최초 작성한 코드 또한 50줄이 채 되지 않았으며, 현재 3개의 클래스. 각 20줄 정도로 유지하고 있어 딱히 리팩토링하지 않았다.
-### 이 6 법칙은 객체지향 생활체조 법칙을 최대한 잘 지켜라는 의미를 내포하고 있지 않나 싶다. 
+### 이 의미는 긴 파일을 읽고, 이해하고, 재사용하기 어렵다는 의미하다. 짝은 너무 단순한 프로그램이라 그런지 최초 작성한 코드 또한 50줄이 채 되지 않았으며, 현재 3개의 클래스. 각 20줄 정도로 유지하고 있어 딱히 리팩토링하지 않았다.
+### 이 6 법칙은 객체지향 생활체조 원칙을  잘 지켜라는 의미 또한 내포하고 있지 않나 싶다. 
