객체지향 생활체조 8법칙 적용

--- a/bin/test/oop9/role8/회고.md
+++ b/bin/test/oop9/role8/회고.md
@@ -16,9 +16,9 @@
 10. ### 객체지향 생활체조 9법칙의 6법칙 '<U>모든 엔티티를 작게 유지한다.</U>'을 무조건 준수한다.
 11. ### 객체지향 생활체조 9법칙의 7법칙 '<U>두개 이상의 인스턴스 변수를 가진 클래스를 쓰지 않는다.</U>'을 무조건 준수한다.
 11. ### 객체지향 생활체조 9법칙의 8법칙 '<U>일급 컬렉션을 사용한다.</U>'을 무조건 준수한다.
+12. ### 홀짝 종료 시 사용자의 정답률을 표시한다. 형식은 다음과 같다 '정답률은 56%(게임 횟수/정답 횟수) 입니다.'
 <br>
 
 # 3. 회고
-### 일급 컬렉션이란 컬렉션 외에 다른 멤버변수를 포함하지 않는 클래스이다. 여기서 컬렉션은 Collection, Map 인터페이스를 상속받는 클래스를 의미하며
-### 대표적으로 List, HashMap, HashSet 등이 있다.
-### 3 원칙을 적용했을 때 자연스럽게 7 법칙도 적용이 되어 리팩토링을 하지 않았다. 복잡한 프로그램을 구현할 때 이 원칙을 지키는 것은 정말 어려울 것 같다.
+### 일급 컬렉션이란 컬렉션 외에 다른 멤버변수를 포함하지 않는 클래스이다. 여기서 컬렉션은 Collection, Map 인터페이스를 상속받는 클래스를 의미하며 대표적으로 List, HashMap, HashSet이 있다.
+### 
