--- a/src/test/oop9/role8/회고.md
+++ b/src/test/oop9/role8/회고.md
@@ -16,9 +16,360 @@
 10. ### 객체지향 생활체조 9법칙의 6법칙 '<U>모든 엔티티를 작게 유지한다.</U>'을 무조건 준수한다.
 11. ### 객체지향 생활체조 9법칙의 7법칙 '<U>두개 이상의 인스턴스 변수를 가진 클래스를 쓰지 않는다.</U>'을 무조건 준수한다.
 11. ### 객체지향 생활체조 9법칙의 8법칙 '<U>일급 컬렉션을 사용한다.</U>'을 무조건 준수한다.
+12. ### 홀짝 종료 시 사용자의 정답률을 표시한다. 형식은 다음과 같다 '정답률은 56%(게임 횟수/정답 횟수) 입니다.'
 <br>
 
-# 3. 회고
-### 일급 컬렉션이란 컬렉션 외에 다른 멤버변수를 포함하지 않는 클래스이다. 여기서 컬렉션은 Collection, Map 인터페이스를 상속받는 클래스를 의미하며
-### 대표적으로 List, HashMap, HashSet 등이 있다.
-### 3 원칙을 적용했을 때 자연스럽게 7 법칙도 적용이 되어 리팩토링을 하지 않았다. 복잡한 프로그램을 구현할 때 이 원칙을 지키는 것은 정말 어려울 것 같다.
+# 3. 기존 코드
+
+``` java
+	class Holjjak{
+	
+		public void holjjak() {
+			
+			System.out.println("안신나는 홀짝 게임!");
+			System.out.println("1 : 홀, 2 : 짝, 그외 : 종료");
+			
+			Scanner in = new Scanner(System.in);
+			InputValue inputValue = null;
+			
+			while((inputValue = new InputValue(in)).inputCheck()) {
+				RandomNumber randomNumber = new RandomNumber();
+				holjjakCheck(inputValue, randomNumber);
+			}
+			
+			in.close();
+		}
+		
+		/**
+		 * @title 홀짝 체크
+		 * @desc 난수에 대한 홀짝을 추출하고, 입력값과 비교하여 최종 홀짝 여부를 판단한다 
+		 */
+		public void holjjakCheck(InputValue inputValue, RandomNumber randomNumber) {
+			int input = inputValue.getInputValue();
+	
+			if(input == randomNumber.getHoljjak()) {
+				System.out.println("개수는 "+ randomNumber.getRandomNumber() +"! 맞췄습니다.");
+				return;
+			}
+			
+			System.out.println("개수는 "+ randomNumber.getRandomNumber() +"! 틀렸습니다.");
+		}
+	}
+	
+	/**
+	 * @title 사용자 입력 값 클래스
+	 * @desc 사용자가 입력한 값을 관리하는 Wrapper 클래스
+	 */
+	class InputValue{
+		
+		int inputValue;
+		
+		InputValue(Scanner in){
+			inputValue = in.nextInt();
+		}
+		
+		InputValue(int inputValue){
+			this.inputValue = inputValue;
+		}
+			
+		// 입력값 체크
+		public boolean inputCheck() {
+	
+			if(inputValue == 1 || inputValue == 2) {
+				return true;
+			}
+			System.out.println("종료되었습니다.");
+			return false;
+		}
+		
+		public int getInputValue() {
+			return inputValue;
+		}
+	}
+	
+	/**
+	 * @title 랜덤 값 클래스
+	 * @desc 랜덤 값을 관리하는 Wrapper 클래스
+	 */
+	class RandomNumber{
+		
+		int randomNumber;
+		
+		// 난수 생성 생성자
+		RandomNumber(){
+			
+			Random random = new Random();
+			randomNumber = random.nextInt(9)+1;
+		}
+		
+		// 랜덤 값 조회
+		public int getRandomNumber() {
+			
+			return randomNumber;
+		}
+		
+		// 홀/짝 조회
+		public int getHoljjak() {
+			if(randomNumber % 2 == 1) {
+				return 1;
+			}
+			return 2;
+		}
+	}
+```
+
+<br> 
+
+# 4. 리팩토링 코드
+```java
+    class Holjjak{
+	
+	public void holjjak() {
+		
+		System.out.println("안신나는 홀짝 게임!");
+		System.out.println("1 : 홀, 2 : 짝, 그외 : 종료");
+		
+		Scanner in = new Scanner(System.in);
+		InputValue inputValue = null;
+		HoljjakScore score = new HoljjakScore();
+		
+		while((inputValue = new InputValue(in)).inputCheck()) {
+			RandomNumber randomNumber = new RandomNumber();
+			score.addResult(holjjakCheck(inputValue, randomNumber));
+		}
+		score.printScoreInfo();
+		in.close();
+	}
+	
+	/**
+	 * @title 홀짝 체크
+	 * @desc 난수에 대한 홀짝을 추출하고, 입력값과 비교하여 최종 홀짝 여부를 판단한다 
+	 */
+	public boolean holjjakCheck(InputValue inputValue, RandomNumber randomNumber) {
+		int input = inputValue.getInputValue();
+
+		if(input == randomNumber.getHoljjak()) {
+			System.out.println("개수는 "+ randomNumber.getRandomNumber() +"! 맞췄습니다.");
+			return true;
+		}
+		
+		System.out.println("개수는 "+ randomNumber.getRandomNumber() +"! 틀렸습니다.");
+		return false;
+	}
+}
+
+/**
+ * @title 사용자 입력 값 클래스
+ * @desc 사용자가 입력한 값을 관리하는 Wrapper 클래스
+ */
+class InputValue{
+	
+	int inputValue;
+	
+	InputValue(Scanner in){
+		inputValue = in.nextInt();
+	}
+	
+	InputValue(int inputValue){
+		this.inputValue = inputValue;
+	}
+		
+	// 입력값 체크
+	public boolean inputCheck() {
+
+		if(inputValue == 1 || inputValue == 2) {
+			return true;
+		}
+		System.out.println("종료되었습니다.");
+		return false;
+	}
+	
+	public int getInputValue() {
+		return inputValue;
+	}
+}
+
+/**
+ * @title 랜덤 값 클래스
+ * @desc 랜덤 값을 관리하는 Wrapper 클래스
+ */
+class RandomNumber{
+	
+	int randomNumber;
+	
+	// 난수 생성 생성자
+	RandomNumber(){
+		
+		Random random = new Random();
+		randomNumber = random.nextInt(9)+1;
+	}
+	
+	// 랜덤 값 조회
+	public int getRandomNumber() {
+		
+		return randomNumber;
+	}
+	
+	// 홀/짝 조회
+	public int getHoljjak() {
+		if(randomNumber % 2 == 1) {
+			return 1;
+		}
+		return 2;
+	}
+}
+
+/**
+ * @title 홀짝 결과 클래스
+ * @desc 홀짝 결과를 관리하는 일급 컬렉션
+ *
+ */
+class HoljjakScore{
+	
+	List<Boolean> scoreBoard;
+	
+	HoljjakScore(){
+		scoreBoard = new ArrayList<Boolean>();
+	}
+	
+	// 홀짝 결과 추가
+	public void addResult(boolean result){
+		scoreBoard.add(result);
+	}
+	
+	// 홀짝 결과 출력
+	public void printScoreInfo() {
+		int correctCnt = Collections.frequency(scoreBoard, true);
+		int totalCnt = scoreBoard.size();
+		double correctPercent = (double)correctCnt/(double)totalCnt*100;
+
+        if(totalCnt != 0) {
+			System.out.println("정답률은 "+String.format("%.1f",correctPercent)+"%("+correctCnt+","+totalCnt+")입니다.");
+		}
+	}
+}
+```
+### 1. 요구사항 11, 12를 준수하기 위해 홀짝 결과 클래스(HoljjakScore.java)를 일급 컬렉션으로 구현하였다.
+```java
+class HoljjakScore{
+	
+	List<Boolean> scoreBoard;
+	
+	HoljjakScore(){
+		scoreBoard = new ArrayList<Boolean>();
+	}
+	
+	// 홀짝 결과 추가
+	public void addResult(boolean result){
+		scoreBoard.add(result);
+	}
+	
+	// 홀짝 결과 출력
+	public void printScoreInfo() {
+		int correctCnt = Collections.frequency(scoreBoard, true);
+		int totalCnt = scoreBoard.size();
+		double correctPercent = (double)correctCnt/(double)totalCnt*100;
+
+        if(totalCnt != 0) {
+			System.out.println("정답률은 "+String.format("%.1f",correctPercent)+"%("+correctCnt+","+totalCnt+")입니다.");
+		}
+	}
+}
+```
+### 2. 홀짝 결과를 추가하는 HoljjakScore.addResult는 holjjakCheck 메서드 안에서 호출하려 했으나 메서드 파라미터가 추가되고, 결합도가 높아지기(홀짝 체크 + 결과 관리) 에 holjjakCheck 메서드에서 결과값을 return하고, 외부에서 HoljjakScore.addResult를 호출하는 방향으로 구현하였다. 홀짝 게임을 종료할 경우 printScoreInfo() 메서드를 호출하여 결과값을 출력하였다.
+
+### before
+``` java
+    public void holjjak() {
+			
+		...
+
+		while((inputValue = new InputValue(in)).inputCheck()) {
+			RandomNumber randomNumber = new RandomNumber();
+			holjjakCheck(inputValue, randomNumber);
+		}
+
+		...
+	}
+    
+    public void holjjakCheck(InputValue inputValue, RandomNumber randomNumber) {
+		int input = inputValue.getInputValue();
+	
+		if(input == randomNumber.getHoljjak()) {
+			System.out.println("개수는 "+ randomNumber.getRandomNumber() +"! 맞췄습니다.");
+			return;
+		}
+			
+		System.out.println("개수는 "+ randomNumber.getRandomNumber() +"! 틀렸습니다.");
+	}
+```
+
+### after
+``` java
+    public void holjjak() {
+		
+        ...
+
+		HoljjakScore score = new HoljjakScore();
+		
+		while((inputValue = new InputValue(in)).inputCheck()) {
+			RandomNumber randomNumber = new RandomNumber();
+			score.addResult(holjjakCheck(inputValue, randomNumber));
+		}
+		score.printScoreInfo();
+
+        ...
+	}
+
+    public boolean holjjakCheck(InputValue inputValue, RandomNumber randomNumber) {
+		int input = inputValue.getInputValue();
+
+		if(input == randomNumber.getHoljjak()) {
+			System.out.println("개수는 "+ randomNumber.getRandomNumber() +"! 맞췄습니다.");
+			return true;
+		}
+		
+		System.out.println("개수는 "+ randomNumber.getRandomNumber() +"! 틀렸습니다.");
+		return false;
+	}
+```
+<br>
+
+# 5. 회고
+### 일급 컬렉션이란 컬렉션 외에 다른 멤버변수를 포함하지 않는 클래스이다. 여기서 컬렉션은 Collection, Map 인터페이스를 상속받는 클래스를 의미하며 대표적으로 List, HashMap, HashSet이 있다.
+### 이번 리팩토링에서 일급 컬렉션을 사용하였기에 클래스 형태로 홀짝 결과를 관리할 수 있게 되었다. 일급 컬렉션을 사용하지 않았다면 로직이 어땠을까? 1. List는 holjjak 메서드 최상단에 생성, 2. while 문 안에서 List.add 메서드를 호출하여 결과 추가, 3. Holjjak 클래스 내에 결과 리스트를 받아 출력하는 메서드 생성. 와 같은 작업을 진행했을 것이다.
+### 일급컬렉션을 사용함으로 얻을 수 있는 이점은 다음과 같다.
+<br>
+
+### __1. 상태와 행위를 관리할 수 있다.__
+### 결과에 대한 상태와 추가, 조회, 출력, 삭제, 검증과 같은 행위를 하나의 클래스에서 관리할 수 있다. 만약 결과 초기화, 결과 검증 등의 기능이 추가된다고 가정해보자. 일급 컬렉션을 사용하지 않는다면 관련 기능이 Holjjack 클래스의 메서드로 추가될 것이다. 만약 다른 클래스에서 결과 관련 기능이 필요하다면 해당 클래스에도 메서드가 추가될 것이다. 결과 관련 로직이 여러 클래스로 분산될 수 있다.
+<br>
+
+### __2. 컬렉션에 대한 이름을 지정할 수 있다.__
+### 일급 컬렉션을 사용하지 않는다면 이름은 변수 명으로 설정될 것이다. 이 변수명은 개발자에 따라, 클래스에 따라 달라질것이다. 이는 곧 검색이 어려워진다. 홀짝 결과에 대한 요구사항이 추가된다면 관련 코드들을 모두 뒤져야한다. 클래스 명으로 이름을 지정한다면 단순히 클래스 명으로 검색하면 되니 유지보수 요청에 빠르게 대처할 수 있을것이다.
+<br>
+
+### __3. 불변을 보장한다.__
+### 변수로 선언된 컬렉션은 데이터 추가, 삭제가 자유롭다. 일급 컬렉션을 사용한다면 클래스 메서드를 생성하지 않는 한 추가, 삭제가 불가능하기에 불변성을 보장할 수 있다.
+<br>
+
+### __4. 비지니스에 종속적인 자료구조를 생성할 수 있다.__
+### 생성되는 컬렉션을 비지니스에 종속되는 자료구조로 생성 가능하다. 즉, 단순히 자료구조를 생성하는게 아니라 비지니스 로직을 녹인 자료구조를 생성할 수 있다는 뜻이다.
+### 중복되는 이름이 있으면 안되고, 5자리 이하의 영어이름만을 관리하는 자동차의 객체를 예시로 들어보자. 해당 조건들을 서비스 메서드에서 구현을 한다면 자동차 객체리스트가 들어간 모든 장소에서 해당 자동차 리스트에 대한 검증 코드가 들어가야 하는 문제점이 발생한다. 이러한 문제는 아래의 코드와 같이 일급 컬렉션 생성자에 비지니스 로직을 넣어 생성하면 해결이 가능하다.
+``` java
+    public class Cars {
+
+        private List<Car> carList;
+
+        public Cars(List<Car> carList) {
+            validateCarName(carList); // 5자리 이하의 영어이름이 아닐 경우 Exception
+            validateDuplicateName(carList); // 이름이 중복될 경우 Exception
+            this.carList = carList; // 비지니스에 종속적인 자료구조 생성
+        }    
+}
+```
+### 이번 규칙을 적용하기 위해 요구사항 12번을 추가하였다. 기존 요구사항으로는 일급컬렉션을 생성할 여지가 없었고, 단어가 너무 생소하여 직접 경험해봐야겠다고 생각했기 때문이다.
+### 현재 내가 맡은 모든 프로젝트의 컬렉션은 99퍼센트 이상이 변수로 선언되어 있다. 일급 컬렉션의 이점 모두가 너무 중요한데 이를 몰랐던 무지에 대한 부끄러움과 이 규칙을 이해했다는 감동을 동시에 느꼈다. 다음은 마지막 9 규칙을 적용할 차례이다. 마지막까지 집중력을 잃지말자!
+
+
+
