--- a/bin/test/calculator/회고.md
+++ b/bin/test/calculator/회고.md
@@ -1,4 +1,4 @@
 1. 이 로직도 메서드로 분리해야할까? 라는 의구심이 든다면 로직을 기능으로 분리해보자. 분리된다면 분리하자. 
 2. 원시타입을 포장하는 방식을 왜 사용하는지 이해가 되지 않아 찾아보았다. (출처 : https://limdingdong.tistory.com/9)
-	- 단순 값이 아닌 '정보'의 개념으로 사용되는 값은 여러 비지니스 로직에서 재사용 가능성이 있다.
-	- 
+  1) 상태나 정보를 갖는 변수값은 비지니스적으로 의미있는 값이다. 이를 단순 변수로 처리하는것 보다 책임을 위임할 수 있는 클래스 형태로 관리하는 것이 좋다.
+  2) 원시타입을 포장함으로써 메서드의 시그니처가 명확해진다. 클래스로 포장한 타입의 메서드를 파라미터로 사용하게 되면 메소드를 설명하기 더욱 쉬워진다. 아래 두 메서드를 비교해보면 아래의 메서드 시그니처가 더욱 명확함을 알 수 있다. 출처 : https://limdingdong.tistory.com/9
